Date		Added
======
2011/08/09
	* Rev. 14928 Implemented the rest of Brasilis, and updated existing Brasilis NPCs. [L0ne_W0lf]
2011/07/16
	* Rev. 14912 Updated dialog in monster_race.txt [L0ne_W0lf]
2011/07/16
	* Rev. 14900 Have been working on this for months: Added Nidhoggr's Nest instance. [L0ne_W0lf]
	* Tweaks to how checkquest is used in orc's memory and sealed shrine.
2011/07/13
	* Rev. 14905 Tweaked the sealed shrine entrance NPCs. Hopefully the damn thing works now. [L0ne_W0lf]
2011/05/23
	* Rev. 14833 Fixed a possible exploit in guild castle investment. (bugreport:4929, topic:272783) [Brian]
2011/04/08
	* Rev. 14780 Added missing Hair Dressers and Hair Dyer to Lighthalzen. [L0ne_W0lf]
	- Hair Dresser will change hair styles ranging between 20 to 27
	- Assistant Beautician changes to a random style and colour between 1-23.
	* Updated the Cursed Spirit quest, and added some more town NPCs.
	* Added more town NPCs to Splendide and Manuk.
2011/04/06
	* Rev. 14775 Added two new quests, Alberta Boy and Secret Note of Bazett. [L0ne_W0lf]
	* Implemented 13.2 update to Report to the New World quest.
2011/03/21
	* Fixed and commented out old Anthell entrance warps (bugreport:3589). Moved entrance to cmd_fild08 to match mapcache updates [Gepard]
	- Fixed an issue in Resurrection of Satan Morroc (Continental Guard Quest) when player dying/logging out during conversation
	  could prevent summoning of Satan Morroc until server reboot (bugreport:3437).
2011/03/17
	* Rev. 14747 Endless Tower fixes: [Gepard]
	- Added missing end's to prevent accidental disabling of warps between floors. (bugreport:4623)
	- Added missing end's to prevent infinite mobspawn (bugreport:4540)
	- Commented out remaining GM-only NPCs.
2011/02/06
	* Rev. 14697 Script bug fixing. :] Here's some. I know it's been awhile. [L0ne_W0lf]
	- Changed some duplicates so they use a floating NPC as their original. (bugreport:1395)